test/integration/httproute/manifests/basic/ok_no_reload_when_modification_only_affect_maps/echo-endpoints-1.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: http-echo
  labels:
    kubernetes.io/service-name: http-echo
addressType: IPv4
endpoints:
  - addresses:
      - 10.0.0.1
      - 10.0.0.2
      - 10.0.0.3
    conditions:
      ready: true
      serving: true
      terminating: false
ports:
  - name: http
    port: 8888
    protocol: TCP
  - name: https
    port: 8443
    protocol: TCP
