test/integration/httproute/manifests/basic/ok_no_reload_when_modification_only_affect_maps/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: haproxy
  listeners:
  - name: http
    port: 8080
    protocol: HTTP
    allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
    hostname: "*.haproxy"
  - name: http2
    protocol: HTTP
    port: 8088
    allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
