test/integration/httproute/manifests/basic/ok_no_reload_when_modification_only_affect_maps/route-path-prefix-1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-echo
spec:
  parentRefs:
    - name: gateway
      sectionName: http
    - name: gateway
      sectionName: http2
  hostnames:
    - "example.haproxy"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /path1
      backendRefs:
        - name: http-echo
          port: 80
